--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ main h2 {
 }
 
 .add-btn {
-  display: inline-block;
-  margin-top: 0.5rem;
+  display: block;
+  margin: 0.5rem auto 0 auto;
   padding: 10px 18px;
   max-width: 200px;
   background: #2ecc71;
@@ -145,7 +145,9 @@ main h2 {
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.25s ease;
+  text-align: center;
 }
+
 
 .add-btn:hover {
   background: #27ae60;
