--- a/style.css
+++ b/style.css
@@ -13,8 +13,13 @@ header {
   align-items: center;
   padding: 0 16px;
   height: 80px;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  transition: height 0.3s ease;
+  z-index: 100;
 }
 
 header h1 {
@@ -39,10 +44,14 @@ header button {
   gap: 5px;
 }
 
+main {
+  padding-top: 100px;
+}
+
 main h2 {
   margin-left: 32px;
   font-size: 2.3rem;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .products {
@@ -112,7 +121,7 @@ main h2 {
   padding: 0.5rem;
   cursor: pointer;
   border-radius: 5px;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .add-btn:hover {
@@ -121,6 +130,10 @@ main h2 {
 
 .add-btn.in-cart {
   background: #e53935;
+}
+
+.add-btn.in-cart:hover {
+  background: #d32f2f;
 }
 
 .modal.hidden {
@@ -213,16 +226,6 @@ main h2 {
   background: #d32f2f;
 }
 
-.card-bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 10px;
-  flex: 1;
-  gap: 5px;
-}
-
 .order-form {
   display: flex;
   flex-direction: column;
@@ -274,4 +277,3 @@ main h2 {
   opacity: 1;
   transform: translateY(0);
 }
-
